fix login alignement

--- a/web/src/Pages/Login/login.scss
+++ b/web/src/Pages/Login/login.scss
@@ -9,7 +9,7 @@
 
   .login-language-selection-container {
     position: absolute;
-    bottom: 2rem;
+    bottom: 26px;
     left: 2rem;
     font-weight: regular;
     font-size: 0.8rem;
